kubernetes/monitoring/sonar/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: monitoring
spec:
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: sonarqube
  type: ClusterIP
